--- a/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
+++ b/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
@@ -55,15 +55,23 @@ a_gene_snp$SNPWindow <- paste("chromosome:GRCh37:",a_gene_snp$SNPChr, ":", a_gen
 ```
 
 Using only motifs on positive strands, sort motifs by Motif Score
+Change # data points with value of n in z_test_group
 ```{r get_samples}
 
 x1_s <- x1[!duplicated(x1$"Motif Name"), ] # 423 x8
 x2_s <- x2[!duplicated(x2$"Motif Name"), ] # 422 x 8
 
-z <- inner_join(x1_s[x1_s$"ref_Strand" == "+",], x2_s[x2_s$"alt_Strand" == "+",], by="Motif Name") # 925540 x 9
-z_test_group <- tail(z[order(z$"ref_MotifScore", decreasing=F),], n=11L) # 11 x 15
+# z <- inner_join(x1_s[x1_s$"ref_Strand" == "+",], x2_s[x2_s$"alt_Strand" == "+",], by="Motif Name") # 925540 x 9
+
+z <- x1_s[x1_s$"ref_Strand" == "+",]
+z_test_group_ref <- z[order(z$"ref_MotifScore", decreasing=F),]
+# z_test_group_ref <- tail(z[order(z$"ref_MotifScore", decreasing=F),], n=126L) # 237 x 15
 #z_test_group$alt_Offset <- z_test_group$alt_Offset + 21
 #z_test_group$ref_Offset <- z_test_group$ref_Offset + 21
+
+z <- x2_s[x2_s$"alt_Strand" == "+",]
+z_test_group_alt <- z[order(z$"alt_MotifScore", decreasing=F),]
+# z_test_group_alt <- tail(z[order(z$"alt_MotifScore", decreasing=F),], n=215L) # 215 x 15
 
 ```
 
@@ -84,11 +92,13 @@ alt_test_group_transposed
 ```
 
 ```{r test_group_data}
-ref_test_group <- x1_s[x1_s$"Motif Name" %in% z_test_group$"Motif Name"] # 11 x 8 
-alt_test_group <- x2_s[x2_s$"Motif Name" %in% z_test_group$"Motif Name"] # 11 x 8
+ref_test_group <- x1_s[x1_s$"Motif Name" %in% z_test_group_ref$"Motif Name"] # 237 x 8 
+alt_test_group <- x2_s[x2_s$"Motif Name" %in% z_test_group_alt$"Motif Name"] # 215 x 8
 
 # Note: ref_test_group[1,"Motif Name"] != ref_test_group$`Motif Name`[1]
 ```
+
+Todo: detect # motifs without hardcoding it in
 
 ```{r create_motifs_table}
 
@@ -97,16 +107,17 @@ alt_test_group <- x2_s[x2_s$"Motif Name" %in% z_test_group$"Motif Name"] # 11 x 
 motifs_table <- data.frame(read.table("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif1.motif", sep="\t", header=F,nrow=1)[,2])
 colnames(motifs_table) <- "Motif Name"
 
-for (i in 2:412){
+n = 423
+for (i in 2:n){
   z <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", i, ".motif", sep=""), sep="\t", header=F,nrow=1)[,2]
   z <- data.frame(z)
   colnames(z) <- "Motif Name"
   motifs_table <- rbind(motifs_table, z)
 }
 
-motifs_table <- cbind(motifs_table, 1:412)
+motifs_table <- cbind(motifs_table, 1:n)
 colnames(motifs_table)[2] <- "Num"
-# 412 x 2
+# 423 x 2
 
 ```
 
@@ -133,7 +144,7 @@ colnames(impt_table) <- c("A", "C", "G", "T")
 # pe <- makePWM(t(impt))
 max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt), cols=T)), 1:nrow(impt), colnames(impt)[apply(impt,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
-tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
+tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 
 ## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for alt_test_group: I think eQTLGen is zero-indexed.
 
@@ -144,14 +155,29 @@ motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for f
 # it works: substr(ref_test_group_with_fasta$fasta_seq_og[1], ref_test_group_with_fasta$ref_Offset[1]+1, ref_test_group_with_fasta$ref_Offset[1]+1)
 
 ## does_TF_hit_SNP_if_so_get_position
-# plot(max_TF_motifs$Num)
+
 if (motif_w_fasta_seq_info$ref_Offset >= (21 - nchar(tf_motif)))
 {
     ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
     all_snp_pwms_ref <- max_TF_motifs[21 - ref_test_group_file$ref_Offset[i], ] # make this rbind later
     all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
 } else {
-    counter_of_excluded_data = counter_of_excluded_data + 1
+    ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
+    
+    a1 <- max(impt_table[21 - ref_test_group_file$ref_Offset[i], ])
+    
+    b1 <- as.matrix(impt_table)
+    b2 <- which(m1 == 0.627, arr.ind=T)
+    b2_col <- m2[which(m2[,"row"]==13),"col"]
+    
+    c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
+    
+    all_snp_pwms_ref <- cbind(a1, b2_col, c1)  # make this rbind later
+    colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base")
+    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
+    # cbind(max(impt_table[21 - ref_test_group_file$ref_Offset[i], ]), impt_table[21 - ref_test_group_file$ref_Offset[i], ],rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]  )
+    counter_of_excluded_data <- counter_of_excluded_data+1
+
 }
 
 # nchar("CATGTATACATATGT") = 15
@@ -183,9 +209,22 @@ for (i in 2:nrow(ref_test_group_file)){
   if (motif_w_fasta_seq_info$ref_Offset >= (21 - nchar(tf_motif)))
   {
       ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-      all_snp_pwms_ref <- rbind(all_snp_pwms_ref, data.frame(max_TF_motifs[21 - ref_test_group_file$ref_Offset[i], ], i))
+      row_to_bind <- data.frame(max_TF_motifs[21 - ref_test_group_file$ref_Offset[i], ], i)
+      all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
   } else {
-    counter_of_excluded_data = counter_of_excluded_data + 1
+    
+    a1 <- max(impt_table[21 - ref_test_group_file$ref_Offset[i], ])
+    
+    b1 <- as.matrix(impt_table)
+    b2 <- which(m1 == 0.627, arr.ind=T)
+    b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
+    
+    c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
+    
+    row_to_bind <- cbind(a1, c1, b2_col, i)
+    colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
+    all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
+    counter_of_excluded_data <- counter_of_excluded_data + 1
   }
   
 }
@@ -197,13 +236,14 @@ for (i in 2:nrow(ref_test_group_file)){
 
 # mean = blue dashed line, density plot = red transparent
 
-ggplot(all_snp_pwms, aes(x=Num)) + 
-  geom_histogram(color="black", fill="blue") +
+ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) + 
+  #stat_count() +
+  geom_bar(color="black", fill="blue") +
   #geom_text(aes(label=Base), hjust=2, vjust=1) + 
   #geom_point(data = max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[1],], x=Index, y = Num) +
   theme_stata() +
   geom_density(alpha=.2, fill="#FF6666") +
-  geom_vline(aes(xintercept=mean(Num)),
+  geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
   ggtitle("Likelihood of All Motifs - Reference Allele")
 
@@ -252,6 +292,20 @@ if (motif_w_fasta_seq_info$alt_Offset >= (21 - nchar(tf_motif)))
     all_snp_pwms_alt <- max_TF_motifs[21 - alt_test_group_file$alt_Offset[i], ] # make this rbind later
     all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i) # make this cbind later
 } else {
+    alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
+    
+    a1 <- max(impt_table[21 - alt_test_group_file$alt_Offset[i], ])
+    
+    b1 <- as.matrix(impt_table)
+    b2 <- which(m1 == 0.627, arr.ind=T)
+    b2_col <- m2[which(m2[,"row"]==13),"col"]
+    
+    c1 <- rownames(impt_table)[21 - alt_test_group_file$alt_Offset[i]]
+    
+    all_snp_pwms_alt <- cbind(a1, b2_col, c1)  # make this rbind later
+    colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base")
+    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i) # make this cbind later
+
     counter_of_excluded_data = counter_of_excluded_data + 1
 }
 
@@ -286,6 +340,19 @@ for (i in 2:nrow(alt_test_group_file)){
       alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
       all_snp_pwms_alt <- rbind(all_snp_pwms_alt, data.frame(max_TF_motifs[21 - alt_test_group_file$alt_Offset[i], ], i))
   } else {
+    a1 <- max(impt_table[21 - alt_test_group_file$alt_Offset[i], ])
+    
+    b1 <- as.matrix(impt_table)
+    b2 <- which(m1 == 0.627, arr.ind=T)
+    b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
+    
+    c1 <- rownames(impt_table)[21 - alt_test_group_file$alt_Offset[i]]
+    
+    row_to_bind <- cbind(a1, c1, b2_col, i)
+    colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
+    all_snp_pwms_alt <- rbind(all_snp_pwms_alt, row_to_bind)
+    counter_of_excluded_data <- counter_of_excluded_data + 1
+
     counter_of_excluded_data = counter_of_excluded_data + 1
   }
   
@@ -359,13 +426,13 @@ alt_foxa1 <- merge(alt_foxa1, a_gene_snp, by = c("SNPWindow"))
 
 # mean = blue dashed line, density plot = red transparent
 
-ggplot(all_snp_pwms, aes(x=Num)) + 
-  geom_histogram(color="black", fill="blue") +
+ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) + 
+  geom_bar(color="black", fill="blue") +
   #geom_text(aes(label=Base), hjust=2, vjust=1) + 
   #geom_point(data = max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[1],], x=Index, y = Num) +
   theme_stata() +
   geom_density(alpha=.2, fill="#FF6666") +
-  geom_vline(aes(xintercept=mean(Num)),
+  geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
   ggtitle("Likelihood of All Motifs - Alternative Allele")
 
