--- a/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
+++ b/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
@@ -52,6 +52,18 @@ x2 <- in_alt_not_ref_unique_SNP[!duplicated(in_alt_not_ref_unique_SNP),] # 72078
 a_gene_snp <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_output/a_gene_snp.txt") # 925540 x 14
 a_gene_snp$SNPWindow <- paste("chromosome:GRCh37:",a_gene_snp$SNPChr, ":", a_gene_snp$SNPWindowStart, ":", a_gene_snp$SNPWindowEnd,":1", sep="") # 925540 x 15
 
+null_ref <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_input/homer_master_ref.txt", sep='\t', header=T)
+colnames(null_ref) <- c("SNPWindow", "ref_Offset", "Sequence", "Motif Name", "ref_Strand", "ref_MotifScore")
+null_ref <- null_ref[!duplicated(null_ref),]
+null_ref$SNPWindow <- gsub("\\-.*", "", null_ref$SNPWindow) # if necessary
+null_alt <- fread("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_input/homer_master_alt.txt", sep='\t', header=T)
+colnames(null_alt) <- c("SNPWindow", "alt_Offset", "Sequence", "Motif Name", "alt_Strand", "alt_MotifScore")
+null_alt <- null_alt[!duplicated(null_alt),]
+null_alt$SNPWindow <- gsub("\\-.*", "", null_alt$SNPWindow) # if necessary
+
+# x1 <- null_ref
+# x2 <- null_alt
+
 ```
 
 Using only motifs on positive strands, sort motifs by Motif Score
@@ -107,7 +119,7 @@ Todo: detect # motifs without hardcoding it in
 motifs_table <- data.frame(read.table("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif1.motif", sep="\t", header=F,nrow=1)[,2])
 colnames(motifs_table) <- "Motif Name"
 
-n = 423
+n = 426
 for (i in 2:n){
   z <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", i, ".motif", sep=""), sep="\t", header=F,nrow=1)[,2]
   z <- data.frame(z)
@@ -125,13 +137,12 @@ colnames(motifs_table)[2] <- "Num"
  
 ref_test_group_file <- left_join(ref_test_group, motifs_table) # 11 x 9
 ref_test_group_file$ref_Offset <- ref_test_group_file$ref_Offset + 21
+ref_test_group_file$SNPPosInFasta <- 0.001 
 
-ref_test_group_with_fasta <- merge(ref_test_group, a_gene_snp, by = c("SNPWindow", "SNP")) # also by 'SNP'
+ref_test_group_with_fasta <- merge(ref_test_group, a_gene_snp) # also by 'SNP'
 ref_test_group_with_fasta$ref_Offset <- ref_test_group_with_fasta$ref_Offset+21
 ref_test_group_with_fasta <- ref_test_group_with_fasta[which(str_sub(ref_test_group_with_fasta$fasta_seq_og, 21, 21) == ref_test_group_with_fasta$OtherAllele), ] # 37x20, only necessary if you didn't use old a_gene_snp file for homer input
-ref_test_group_with_fasta$SNPPosInFasta <- 0.001 
 counter_of_excluded_data <- 0
-
 ```
 
 ```{r get_max_pwm_info_ref}
@@ -142,7 +153,7 @@ i=1
 impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
 colnames(impt_table) <- c("A", "C", "G", "T")
 # pe <- makePWM(t(impt))
-max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt), cols=T)), 1:nrow(impt), colnames(impt)[apply(impt,1,which.max)]))
+max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
 tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 
@@ -156,29 +167,35 @@ motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for f
 
 ## does_TF_hit_SNP_if_so_get_position
 
-if (motif_w_fasta_seq_info$ref_Offset >= (21 - nchar(tf_motif)))
+if (motif_w_fasta_seq_info$ref_Offset[i] >= (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$ref_Offset != 21)
 {
     ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-    all_snp_pwms_ref <- max_TF_motifs[21 - ref_test_group_file$ref_Offset[i], ] # make this rbind later
+    all_snp_pwms_ref <- max_TF_motifs[21 - motif_w_fasta_seq_info$ref_Offset[i], ] # make this rbind later
     all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
 } else {
-    ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-    
-    a1 <- max(impt_table[21 - ref_test_group_file$ref_Offset[i], ])
-    
-    b1 <- as.matrix(impt_table)
-    b2 <- which(m1 == 0.627, arr.ind=T)
-    b2_col <- m2[which(m2[,"row"]==13),"col"]
-    
-    c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
-    
-    all_snp_pwms_ref <- cbind(a1, b2_col, c1)  # make this rbind later
-    colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base")
-    all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
-    # cbind(max(impt_table[21 - ref_test_group_file$ref_Offset[i], ]), impt_table[21 - ref_test_group_file$ref_Offset[i], ],rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]  )
-    counter_of_excluded_data <- counter_of_excluded_data+1
-
+  all_snp_pwms_ref <- data.table(NA, NA, NA, i) # to begin
+  colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base", "i")
+  counter_of_excluded_data <- counter_of_excluded_data + 1
 }
+    
+# } else if (motif_w_fasta_seq_info$ref_Offset != 21) {
+#     ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
+#     
+#     a1 <- max(impt_table[21 - motif_w_fasta_seq_info$ref_Offset[1], ])
+#     
+#     b1 <- as.matrix(impt_table)
+#     b2 <- which(m1 == 0.627, arr.ind=T) # ENED TO FIX
+#     b2_col <- m2[which(m2[,"row"]==13),"col"] # NEED TO FIX
+#     
+#     c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
+#     
+#     all_snp_pwms_ref <- cbind(a1, b2_col, c1)  # make this rbind later
+#     colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base")
+#     all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
+#     # cbind(max(impt_table[21 - ref_test_group_file$ref_Offset[i], ]), impt_table[21 - ref_test_group_file$ref_Offset[i], ],rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]  )
+#     counter_of_excluded_data <- counter_of_excluded_data+1
+# 
+# } 
 
 # nchar("CATGTATACATATGT") = 15
 # TF: substr("ACATGGCACATGTATACATATGTAACAAACCTGCACATTGTG", 9, 9+15-1) = (fasta_sequence_og, ref_offset+1, ref_offset+nchar(tf_motif)-1)
@@ -192,7 +209,7 @@ if (motif_w_fasta_seq_info$ref_Offset >= (21 - nchar(tf_motif)))
 for (i in 2:nrow(ref_test_group_file)){
   impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
   colnames(impt_table) <- c("A", "C", "G", "T")
-  max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt), cols=T)), 1:nrow(impt), colnames(impt)[apply(impt,1,which.max)]))
+  max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
   colnames(max_TF_motifs) <- c("Num", "Index", "Base")
   tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
   
@@ -206,28 +223,34 @@ for (i in 2:nrow(ref_test_group_file)){
   
   ## does_TF_hit_SNP_if_so_get_position
   # plot(max_TF_motifs$Num)
-  if (motif_w_fasta_seq_info$ref_Offset >= (21 - nchar(tf_motif)))
+  if (motif_w_fasta_seq_info$ref_Offset[1] > (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$ref_Offset != 21) # if offset = 21, skip this
   {
-      ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-      row_to_bind <- data.frame(max_TF_motifs[21 - ref_test_group_file$ref_Offset[i], ], i)
+      ref_test_group_file$SNPPosInFasta[i] <- 21 - motif_w_fasta_seq_info$ref_Offset[1]
+      row_to_bind <- data.frame(max_TF_motifs[21 - motif_w_fasta_seq_info$ref_Offset[1], ], i)
       all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
   } else {
-    
-    a1 <- max(impt_table[21 - ref_test_group_file$ref_Offset[i], ])
-    
-    b1 <- as.matrix(impt_table)
-    b2 <- which(m1 == 0.627, arr.ind=T)
-    b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
-    
-    c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
-    
-    row_to_bind <- cbind(a1, c1, b2_col, i)
-    colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
-    all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
     counter_of_excluded_data <- counter_of_excluded_data + 1
   }
-  
 }
+
+all_snp_pwms_ref <- all_snp_pwms_ref[!is.na(all_snp_pwms_ref$Num),]
+  
+  # else if (motif_w_fasta_seq_info$ref_Offset[1] != 21) {
+  #   
+  #   a1 <- max(impt_table[21 - motif_w_fasta_seq_info$ref_Offset[1], ])
+  #   
+  #   b1 <- as.matrix(impt_table)
+  #   b2 <- which(m1 == 0.627, arr.ind=T)
+  #   b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
+  #   
+  #   c1 <- rownames(impt_table)[21 - motif_w_fasta_seq_info$ref_Offset[1]]
+  #   
+  #   row_to_bind <- cbind(a1, c1, b2_col, i)
+  #   colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
+  #   all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
+  #   counter_of_excluded_data <- counter_of_excluded_data + 1
+  # } 
+  
 ```
 
 ```{r visualize_likelihood_ref}
@@ -238,11 +261,13 @@ for (i in 2:nrow(ref_test_group_file)){
 
 ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) + 
   #stat_count() +
-  geom_bar(color="black", fill="blue") +
+  geom_histogram(binwidth=.1, color="black", fill="blue") +
+  #y_lim(0, 4)
+  #xlim(0, 1)+
   #geom_text(aes(label=Base), hjust=2, vjust=1) + 
   #geom_point(data = max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[1],], x=Index, y = Num) +
   theme_stata() +
-  geom_density(alpha=.2, fill="#FF6666") +
+  geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
   ggtitle("Likelihood of All Motifs - Reference Allele")
