--- a/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
+++ b/kathryn/bulk_data/q2_3_investigation/q2_3_experiment_pipeline_attempt.Rmd
@@ -152,7 +152,6 @@ i=1
 ## make_PWM_and_get_motif_sequence_for_1_motif
 impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
 colnames(impt_table) <- c("A", "C", "G", "T")
-# pe <- makePWM(t(impt))
 max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
 tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
@@ -162,8 +161,6 @@ tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 ## see_where_TF_hits_fasta_seq
 motif_w_fasta_seq_info <- ref_test_group_with_fasta[which(ref_test_group_with_fasta$"Motif Name" == ref_test_group_file[i,"Motif Name"]),]
 motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-
-# it works: substr(ref_test_group_with_fasta$fasta_seq_og[1], ref_test_group_with_fasta$ref_Offset[1]+1, ref_test_group_with_fasta$ref_Offset[1]+1)
 
 ## does_TF_hit_SNP_if_so_get_position
 
@@ -178,34 +175,6 @@ if (motif_w_fasta_seq_info$ref_Offset[i] >= (21 - nchar(tf_motif)) & motif_w_fas
   counter_of_excluded_data <- counter_of_excluded_data + 1
 }
     
-# } else if (motif_w_fasta_seq_info$ref_Offset != 21) {
-#     ref_test_group_file$SNPPosInFasta[i] <- 21 - ref_test_group_file$ref_Offset[i]
-#     
-#     a1 <- max(impt_table[21 - motif_w_fasta_seq_info$ref_Offset[1], ])
-#     
-#     b1 <- as.matrix(impt_table)
-#     b2 <- which(m1 == 0.627, arr.ind=T) # ENED TO FIX
-#     b2_col <- m2[which(m2[,"row"]==13),"col"] # NEED TO FIX
-#     
-#     c1 <- rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]
-#     
-#     all_snp_pwms_ref <- cbind(a1, b2_col, c1)  # make this rbind later
-#     colnames(all_snp_pwms_ref) <- c("Num", "Index", "Base")
-#     all_snp_pwms_ref <- cbind(all_snp_pwms_ref, i) # make this cbind later
-#     # cbind(max(impt_table[21 - ref_test_group_file$ref_Offset[i], ]), impt_table[21 - ref_test_group_file$ref_Offset[i], ],rownames(impt_table)[21 - ref_test_group_file$ref_Offset[i]]  )
-#     counter_of_excluded_data <- counter_of_excluded_data+1
-# 
-# } 
-
-# nchar("CATGTATACATATGT") = 15
-# TF: substr("ACATGGCACATGTATACATATGTAACAAACCTGCACATTGTG", 9, 9+15-1) = (fasta_sequence_og, ref_offset+1, ref_offset+nchar(tf_motif)-1)
-# SNP: substr("ACATGGCA*C*ATGTATACATA*T*GTAACAAACCTGCACATTGTG", 21, 21)
-#                       9             21
-# position of SNP in fasta sequence: 21
-# if offset >= 21 - (nchar(tf_motif))
-#   position of SNP in TF: 21 - 9 + 1 = 21 - (ref_Offset + 1) + 1 = 21 - ref_Offset = 21 - 8
-
-
 for (i in 2:nrow(ref_test_group_file)){
   impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
   colnames(impt_table) <- c("A", "C", "G", "T")
@@ -218,8 +187,6 @@ for (i in 2:nrow(ref_test_group_file)){
   ## see_where_TF_hits_fasta_seq
   motif_w_fasta_seq_info <- ref_test_group_file[which(ref_test_group_file$"Motif Name" == ref_test_group_file[i,"Motif Name"]),]
   motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
-  
-  # it works: substr(ref_test_group_with_fasta$fasta_seq_og[1], ref_test_group_with_fasta$ref_Offset[1]+1, ref_test_group_with_fasta$ref_Offset[1]+1)
   
   ## does_TF_hit_SNP_if_so_get_position
   # plot(max_TF_motifs$Num)
@@ -234,22 +201,6 @@ for (i in 2:nrow(ref_test_group_file)){
 }
 
 all_snp_pwms_ref <- all_snp_pwms_ref[!is.na(all_snp_pwms_ref$Num),]
-  
-  # else if (motif_w_fasta_seq_info$ref_Offset[1] != 21) {
-  #   
-  #   a1 <- max(impt_table[21 - motif_w_fasta_seq_info$ref_Offset[1], ])
-  #   
-  #   b1 <- as.matrix(impt_table)
-  #   b2 <- which(m1 == 0.627, arr.ind=T)
-  #   b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
-  #   
-  #   c1 <- rownames(impt_table)[21 - motif_w_fasta_seq_info$ref_Offset[1]]
-  #   
-  #   row_to_bind <- cbind(a1, c1, b2_col, i)
-  #   colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
-  #   all_snp_pwms_ref <- rbind(all_snp_pwms_ref, row_to_bind)
-  #   counter_of_excluded_data <- counter_of_excluded_data + 1
-  # } 
   
 ```
 
@@ -270,7 +221,7 @@ ggplot(all_snp_pwms_ref, aes(x=as.numeric(Num))) +
   geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
-  ggtitle("Likelihood of All Motifs - Reference Allele")
+  ggtitle("Likelihood of Interesting Motifs - Reference Allele")
 
 ```
 
@@ -280,11 +231,11 @@ For alt
 
 alt_test_group_file <- left_join(alt_test_group, motifs_table) # 11 x 9
 alt_test_group_file$alt_Offset <- alt_test_group_file$alt_Offset + 21
+alt_test_group_file$SNPPosInFasta <- 0.001 
 
-alt_test_group_with_fasta <- merge(alt_test_group, a_gene_snp, by = c("SNPWindow", "SNP")) # also by 'SNP'
+alt_test_group_with_fasta <- merge(alt_test_group, a_gene_snp) # also by 'SNP'
 alt_test_group_with_fasta$alt_Offset <- alt_test_group_with_fasta$alt_Offset+21
 alt_test_group_with_fasta <- alt_test_group_with_fasta[which(str_sub(alt_test_group_with_fasta$fasta_seq_og, 21, 21) == alt_test_group_with_fasta$OtherAllele), ] # 37x20, only necessary if you didn't use old a_gene_snp file for homer input
-alt_test_group_with_fasta$SNPPosInFasta <- 0.001 
 counter_of_excluded_data <- 0
 
 ```
@@ -296,10 +247,9 @@ i=1
 ## make_PWM_and_get_motif_sequence_for_1_motif
 impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
 colnames(impt_table) <- c("A", "C", "G", "T")
-# pe <- makePWM(t(impt))
-max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt), cols=T)), 1:nrow(impt), colnames(impt)[apply(impt,1,which.max)]))
+max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
 colnames(max_TF_motifs) <- c("Num", "Index", "Base")
-tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
+tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")
 
 ## get_fasta_seq_and_get_rid_of_matches_that_do_not_work: Where does the SNP hit the TF? for alt_test_group: I think eQTLGen is zero-indexed.
 
@@ -307,46 +257,23 @@ tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
 motif_w_fasta_seq_info <- alt_test_group_with_fasta[which(alt_test_group_with_fasta$"Motif Name" == alt_test_group_file[i,"Motif Name"]),]
 motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
 
-# it works: substr(alt_test_group_with_fasta$fasta_seq_og[1], alt_test_group_with_fasta$alt_Offset[1]+1, alt_test_group_with_fasta$alt_Offset[1]+1)
-
 ## does_TF_hit_SNP_if_so_get_position
-# plot(max_TF_motifs$Num)
-if (motif_w_fasta_seq_info$alt_Offset >= (21 - nchar(tf_motif)))
+
+if (motif_w_fasta_seq_info$alt_Offset[i] >= (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$alt_Offset != 21)
 {
     alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
-    all_snp_pwms_alt <- max_TF_motifs[21 - alt_test_group_file$alt_Offset[i], ] # make this rbind later
+    all_snp_pwms_alt <- max_TF_motifs[21 - motif_w_fasta_seq_info$alt_Offset[i], ] # make this rbind later
     all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i) # make this cbind later
 } else {
-    alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
-    
-    a1 <- max(impt_table[21 - alt_test_group_file$alt_Offset[i], ])
-    
-    b1 <- as.matrix(impt_table)
-    b2 <- which(m1 == 0.627, arr.ind=T)
-    b2_col <- m2[which(m2[,"row"]==13),"col"]
-    
-    c1 <- rownames(impt_table)[21 - alt_test_group_file$alt_Offset[i]]
-    
-    all_snp_pwms_alt <- cbind(a1, b2_col, c1)  # make this rbind later
-    colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base")
-    all_snp_pwms_alt <- cbind(all_snp_pwms_alt, i) # make this cbind later
-
-    counter_of_excluded_data = counter_of_excluded_data + 1
+  all_snp_pwms_alt <- data.table(NA, NA, NA, i) # to begin
+  colnames(all_snp_pwms_alt) <- c("Num", "Index", "Base", "i")
+  counter_of_excluded_data <- counter_of_excluded_data + 1
 }
-
-# nchar("CATGTATACATATGT") = 15
-# TF: substr("ACATGGCACATGTATACATATGTAACAAACCTGCACATTGTG", 9, 9+15-1) = (fasta_sequence_og, alt_offset+1, alt_offset+nchar(tf_motif)-1)
-# SNP: substr("ACATGGCA*C*ATGTATACATA*T*GTAACAAACCTGCACATTGTG", 21, 21)
-#                       9             21
-# position of SNP in fasta sequence: 21
-# if offset >= 21 - (nchar(tf_motif))
-#   position of SNP in TF: 21 - 9 + 1 = 21 - (alt_Offset + 1) + 1 = 21 - alt_Offset = 21 - 8
-
-
+    
 for (i in 2:nrow(alt_test_group_file)){
   impt_table <- read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)
   colnames(impt_table) <- c("A", "C", "G", "T")
-  max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt), cols=T)), 1:nrow(impt), colnames(impt)[apply(impt,1,which.max)]))
+  max_TF_motifs <- data.frame(cbind(data.frame(rowMaxs(as.matrix(impt_table), cols=T)), 1:nrow(impt_table), colnames(impt_table)[apply(impt_table,1,which.max)]))
   colnames(max_TF_motifs) <- c("Num", "Index", "Base")
   tf_motif <- paste(max_TF_motifs$Base, collapse="", sep="")  # CATGCATATGCATAT
   
@@ -356,38 +283,25 @@ for (i in 2:nrow(alt_test_group_file)){
   motif_w_fasta_seq_info <- alt_test_group_file[which(alt_test_group_file$"Motif Name" == alt_test_group_file[i,"Motif Name"]),]
   motif_w_fasta_seq_info <- motif_w_fasta_seq_info[1,] # only need first row for fasta seq
   
-  # it works: substr(alt_test_group_with_fasta$fasta_seq_og[1], alt_test_group_with_fasta$alt_Offset[1]+1, alt_test_group_with_fasta$alt_Offset[1]+1)
-  
   ## does_TF_hit_SNP_if_so_get_position
   # plot(max_TF_motifs$Num)
-  if (motif_w_fasta_seq_info$alt_Offset >= (21 - nchar(tf_motif)))
+  if (motif_w_fasta_seq_info$alt_Offset[1] > (21 - nchar(tf_motif)) & motif_w_fasta_seq_info$alt_Offset != 21) # if offset = 21, skip this
   {
-      alt_test_group_file$SNPPosInFasta[i] <- 21 - alt_test_group_file$alt_Offset[i]
-      all_snp_pwms_alt <- rbind(all_snp_pwms_alt, data.frame(max_TF_motifs[21 - alt_test_group_file$alt_Offset[i], ], i))
+      alt_test_group_file$SNPPosInFasta[i] <- 21 - motif_w_fasta_seq_info$alt_Offset[1]
+      row_to_bind <- data.frame(max_TF_motifs[21 - motif_w_fasta_seq_info$alt_Offset[1], ], i)
+      all_snp_pwms_alt <- rbind(all_snp_pwms_alt, row_to_bind)
   } else {
-    a1 <- max(impt_table[21 - alt_test_group_file$alt_Offset[i], ])
-    
-    b1 <- as.matrix(impt_table)
-    b2 <- which(m1 == 0.627, arr.ind=T)
-    b2_col <- colnames(impt_table) [m2[which(m2[,"row"]==13),"col"]]
-    
-    c1 <- rownames(impt_table)[21 - alt_test_group_file$alt_Offset[i]]
-    
-    row_to_bind <- cbind(a1, c1, b2_col, i)
-    colnames(row_to_bind) <- c("Num", "Index", "Base", "i")
-    all_snp_pwms_alt <- rbind(all_snp_pwms_alt, row_to_bind)
     counter_of_excluded_data <- counter_of_excluded_data + 1
-
-    counter_of_excluded_data = counter_of_excluded_data + 1
   }
-  
 }
+
+all_snp_pwms_alt <- all_snp_pwms_alt[!is.na(all_snp_pwms_alt$Num),]
 ```
 
 
 ```{r make_seqLogos, include=F}
 
-pe <- makePWM(t(read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", ref_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)))
+pe <- makePWM(t(read.table(paste("/Users/kathryntsai/OneDrive\ -\ Villanova\ University/College/2018-2019/Summer\ 2019/TFs_eQTLs_Research/RProjects/Project2/q2_3_investigation/motifs/motif", alt_test_group_file[i,"Num"], ".motif", sep=""), sep="\t", skip=1, header=F, stringsAsFactors=FALSE)))
 pdf("Pax7_longest_bitsscore.pdf")
 seqLogo(pe,ic.scale=T)
 dev.off()
@@ -452,14 +366,12 @@ alt_foxa1 <- merge(alt_foxa1, a_gene_snp, by = c("SNPWindow"))
 # mean = blue dashed line, density plot = red transparent
 
 ggplot(all_snp_pwms_alt, aes(x=as.numeric(Num))) + 
-  geom_bar(color="black", fill="blue") +
-  #geom_text(aes(label=Base), hjust=2, vjust=1) + 
-  #geom_point(data = max_TF_motifs[21 - ref_test_group_with_fasta$ref_Offset[1],], x=Index, y = Num) +
+  geom_histogram(binwidth=.1, color="black", fill="blue") +
   theme_stata() +
-  geom_density(alpha=.2, fill="#FF6666") +
+  geom_density(alpha=.2, fill="#FF6666", aes(y=..count../8)) +
   geom_vline(aes(xintercept=mean(as.numeric(Num))),
             color="blue", linetype="dashed", size=1) + 
-  ggtitle("Likelihood of All Motifs - Alternative Allele")
+  ggtitle("Likelihood of Interesting Motifs - Alternative Allele")
 
 ```
 
